mvp 전략 1단계 실행 스크립트 추가 예정

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+# core
 pandas>=2.2
-numpy>=1.26
-matplotlib>=3.8
 yfinance>=0.2
+
+# parquet writer used by load_ohlcv.py (df.to_parquet)
+pyarrow>=14
