--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-pandas>=2.2,<2.3
-numpy>=1.26,<2.0
-yfinance>=0.2,<0.3
-pyarrow>=16,<17
-tzdata>=2024.1
+pandas>=2.2.2,<3.0
+requests>=2.32.0
+yfinance>=0.2.40
+pyarrow>=14.0.0
