--- a/config.live.json
+++ b/config.live.json
@@ -4,6 +4,9 @@
   "calendar_id": "XNAS",
   "initial_cash": 10000.0,
 
+  "commission_rate": 0.0005,
+  "tax_rate": 0.0,
+
   "lot_step": 1,
   "price_step": 0.01,
   "tif": "OPG",
@@ -27,22 +30,31 @@
     "acnt_prdt_cd": "${KIS_ACNT_PRDT_CD}",
 
     "overseas_conf": {
-      "price_path": "/uapi/overseas-price/v1/quotations/foreign-stock-price",
+      "base_url": "https://openapi.koreainvestment.com:9443",
+      "price_path": "/uapi/overseas-price/v1/quotations/price",
       "order_path": "/uapi/overseas-stock/v1/trading/order",
-
-      "fills_path": "/uapi/overseas-stock/v1/trading/inquire-executions", 
+      "fills_path": "/uapi/overseas-stock/v1/trading/inquire-ccnl",
 
       "tr": {
-        "price": "REPLACE_WITH_TR_ID_FOR_PRICE",
-        "buy":  { "NASD": "REPLACE_WITH_TR_ID_FOR_BUY_NASD"  },
-        "sell": { "NASD": "REPLACE_WITH_TR_ID_FOR_SELL_NASD" },
-        "fills": { "NASD": "REPLACE_WITH_TR_ID_FOR_FILLS_NASD" }
+        "price": "HHDFS76240000",
+        "buy":  { "NASD": "JTTT1002U" },
+        "sell": { "NASD": "JTTT1006U" },
+        "fills": { "NASD": "TTTS3035R" }
       },
 
       "price_step": {
         "NASD": 0.01,
         "NASD:TNDM": 0.01,
         "NASD:CWCO": 0.01
+      },
+
+      "fills_params": {
+        "CANO": "${KIS_CANO}",
+        "ACNT_PRDT_CD": "${KIS_ACNT_PRDT_CD}",
+        "WCRC_FRCR_DVSN_CD": "02",
+        "NATN_CD": "840",
+        "TR_MKET_CD": "01",
+        "INQR_DVSN_CD": "00"
       }
     }
   },
