--- a/config.live.json
+++ b/config.live.json
@@ -1,16 +1,19 @@
 {
+  "two_stage": true,
+  "reserve_pct": 0.01,
+  "alloc_mode": "proportional",
+  "downsize_retries": 2,
+  "price_cushion_pct": 0.001,
+  "fee_cushion_pct": 0.0005,
   "note": "US small caps: TNDM, CWCO",
   "base_currency": "USD",
   "calendar_id": "XNAS",
   "initial_cash": 10000.0,
-
   "commission_rate": 0.0005,
   "tax_rate": 0.0,
-
   "lot_step": 1,
   "price_step": 0.01,
   "tif": "OPG",
-
   "engine": {
     "N": 20,
     "f": 0.02,
@@ -19,35 +22,35 @@
     "sma_long": 50,
     "lot_step": 1
   },
-
   "broker": {
     "class": "KisBrokerAdapter",
     "use_paper": false,
-
     "app_key": "${KIS_APP_KEY}",
     "app_secret": "${KIS_APP_SECRET}",
     "cano": "${KIS_CANO}",
     "acnt_prdt_cd": "${KIS_ACNT_PRDT_CD}",
-
     "overseas_conf": {
       "base_url": "https://openapi.koreainvestment.com:9443",
       "price_path": "/uapi/overseas-price/v1/quotations/price",
       "order_path": "/uapi/overseas-stock/v1/trading/order",
       "fills_path": "/uapi/overseas-stock/v1/trading/inquire-ccnl",
-
       "tr": {
         "price": "HHDFS76240000",
-        "buy":  { "NASD": "JTTT1002U" },
-        "sell": { "NASD": "JTTT1006U" },
-        "fills": { "NASD": "TTTS3035R" }
+        "buy": {
+          "NASD": "JTTT1002U"
+        },
+        "sell": {
+          "NASD": "JTTT1006U"
+        },
+        "fills": {
+          "NASD": "TTTS3035R"
+        }
       },
-
       "price_step": {
         "NASD": 0.01,
         "NASD:TNDM": 0.01,
         "NASD:CWCO": 0.01
       },
-
       "fills_params": {
         "CANO": "${KIS_CANO}",
         "ACNT_PRDT_CD": "${KIS_ACNT_PRDT_CD}",
@@ -58,14 +61,22 @@
       }
     }
   },
-
   "fee": {
     "commission_rate": 0.0005,
     "tax_rate_sell": 0.0
   },
-
   "assets": [
-    { "symbol": "NASD:TNDM", "currency": "USD", "lot_step": 1, "price_step": 0.01 },
-    { "symbol": "NASD:CWCO", "currency": "USD", "lot_step": 1, "price_step": 0.01 }
+    {
+      "symbol": "NASD:TNDM",
+      "currency": "USD",
+      "lot_step": 1,
+      "price_step": 0.01
+    },
+    {
+      "symbol": "NASD:CWCO",
+      "currency": "USD",
+      "lot_step": 1,
+      "price_step": 0.01
+    }
   ]
 }
